--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "angular": "^1.6.0",
     "bootstrap": "^3.3.7",
     "browser-sync": "^2.18.1",
     "cool-ascii-faces": "1.3.4",
