--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "angular": "^1.6.0",
+    "angular-scroll": "^1.0.0",
     "bootstrap": "^3.3.7",
     "browser-sync": "^2.18.1",
     "cool-ascii-faces": "1.3.4",
